# consistent_whitespace

./: .copier-answers.yml  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  Makefile  README.md  mise.toml  shell.nix
.github/: renovate.json  renovate.json5
.github/workflows/: claude-code-agent.yml  claude-code-review.yml  continuous-delivery.yml  continuous-integration.yml  conventional-commits.yml  dogfood-github-actions.yml  dogfood.yml  git-history.yml  github-actions-workflows.yml
ci/: check-consistent-whitespace-formatting.Dockerfile  publish-binary.sh  publish-crate.Dockerfile  publish-docker.sh
end-to-end-tests/examples/: mixed-across-lines-indented.txt  mixed-within-line-indented.txt  tab-indented.txt  two-spaces-indented.txt
end-to-end-tests/features/: across-files.feature  consistent.feature  inconsistent.feature  paths.feature  whitespace.feature
end-to-end-tests/features/steps/: assertions.py  given.py  then.py  utilities.py  when.py
src/: evaluator.rs  lexical_analysis.rs  main.rs  raw_file.rs  reporter.rs
src/consistent_whitespace_checker/: mod.rs
src/evaluator/: mod.rs
src/lexical_analysis/: mod.rs
src/model/: mod.rs
src/model/raw_file/: mod.rs
src/raw_file/: mod.rs
