[package]
name = "consistent_whitespace"
version = "0.3.0"
description = "A utility to check each file starts with the same whitespace."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/consistent_whitespace"
readme = "README.md"
keywords = ["formatting", "format", "lint", "linting", "whitespace"]
categories = ["command-line-utilities", "development-tools", "data-structures", "encoding", "parser-implementations"]


[dependencies]
# For logging.
log = "0.4.22"
pretty_env_logger = "0.5.0"

# For error handling.
anyhow = "1.0.86"

[profile.release]
lto = 'fat'
codegen-units = 1
