[package]
name = "consistent_whitespace"
version = "0.6.0"
description = "A utility that checks for consistent whitespace across your file(s)."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/DeveloperC286/consistent_whitespace"
readme = "README.md"
keywords = ["formatting", "format", "lint", "linting", "whitespace"]
categories = ["command-line-utilities", "development-tools", "data-structures", "encoding", "parser-implementations"]


[dependencies]
# For CLI parsing.
clap = { version = "4.4.6", features = ["derive"] }

# For logging.
log = "0.4.22"
pretty_env_logger = "0.5.0"

# For error handling.
anyhow = "1.0.86"

# For handling .gitignore
ignore = "0.4.23"

[profile.release]
lto = 'fat'
codegen-units = 1
